--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-cli-ghpages": "^2.0.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
